<resources>
    <string name="app_name">Mein Stundenplan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="show_stundenplan">Stundenplan anzeigen</string>
    <string name="manage_stundenplan">Katalog anzeigen</string>
    <string name="new_fach">Neues Fach anlegen</string>
    <string name="read">CSV einlesen</string>
    <string name="read_Backup">Backup einlesen</string>
    <string name="write_Backup">Daten im Backup sichern</string>
    <string name="action_settings">Settings</string>
    <string name="Text_Stundenplan_Leer">Hier gibt es noch nichts zu sehen. Weiter gehen.</string>
    <string name="Text_Test"></string>
    <string name="Backup">Datensicherung</string>
    <string name="button_input">Fach hinzufügen</string>
    <string name="Clear_all">Katalog zurücksetzen</string>


    <string name="input_semester">Semester</string>
    <string name="input_name">Name</string>
    <string name="input_tag">Tag</string>
    <string name="input_beginn">Beginn</string>
    <string name="input_ende">Ende</string>
    <string name="input_raum">Raum</string>
    <string name="input_dozent">Dozent</string>
    <string name="input_kuerzel">Kuerzel</string>


    <string name="Titel">Titel</string>
    <string name="Attribute">Attribute</string>

    <string name="fragmentMonday">Monday</string>
    <string name="fragmentTuesday">Tuesday</string>
    <string name="fragmentWednesday">Wednesday</string>
    <string name="fragmentThursday">Thursday</string>
    <string name="fragmentFriday">Friday</string>

    <string name="Monday">MO</string>
    <string name="Tuesday">DI</string>
    <string name="Wednesday">MI</string>
    <string name="Thursday">DO</string>
    <string name="Friday">FR</string>

    <string-array name="tage_array">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
    </string-array>

    <string name="dialogButtonOK">OK</string>
    <string name="dialogButtonCancel">Abbrechen</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
