<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Sidebar_Stundenplan_anzeigen"
            android:icon="@mipmap/assignment_black"
            android:title="@string/show_stundenplan" />
        <item
            android:id="@+id/Sidebar_Stundenplan_verwalten"
            android:icon="@mipmap/build_black"
            android:title="@string/manage_stundenplan" />
        <item
            android:id="@+id/Sidebar_Neues_Fach"
            android:icon="@mipmap/input_black"
            android:title="@string/new_fach" />
        <item
            android:id="@+id/Sidebar_Einlesen"
            android:icon="@mipmap/file_download_black"
            android:title="@string/read" />

    </group>

    <item android:title="@string/Backup">
        <menu>
            <item
                android:id="@+id/Sidebar_read_Backup"
                android:icon="@mipmap/folder_open_black"
                android:title="@string/read_Backup" />

            <item
                android:id="@+id/Sidebar_write_Backup"
                android:icon="@mipmap/save_black"
                android:title="@string/write_Backup" />

            <item
                android:id="@+id/Sidebar_katalog_clear"
                android:icon="@mipmap/delete_forever_black"
                android:title="@string/Clear_all" />
        </menu>
    </item>
</menu>
